Bug 157742 - FILESAVE PPTX: Green background from copy&pasted slide turns black
Summary: FILESAVE PPTX: Green background from copy&pasted slide turns black
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.6.0.3 release
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:24.8.0 target:24.2.0.2
Keywords: bibisected, bisected, filter:pptx, regression
Depends on:
Blocks: OOXML-Doc-Themes
  Show dependency treegraph
 
Reported: 2023-10-13 15:14 UTC by Gerald Pfeifer
Modified: 2024-01-11 12:01 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample slide (PPTX) (672.29 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2023-10-13 15:14 UTC, Gerald Pfeifer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gerald Pfeifer 2023-10-13 15:14:50 UTC
Created attachment 190194 [details]
Sample slide (PPTX)

How to reproduce

 1. Open sample document.
 2. Copy and paste the first slide, i.e., duplicate it.
 3. Save under a new name.
 4. Open the new file and observe how the dark green background at 
    the top of the second, copy&pasted slide is now black

Note: This only happens when saving to PPTX in step 3.
      Saving to ODP does not reproduce this.

Note: It also happens (though not tested as extensively)
      when the original file is in ODP format.

And now the head scratcher: Start with an ODP document with two instances
  of the original slide, copy those two and paste them, arriving at four
  instances. Save as PPTX. Voila, #1 is correct, #2 to #4 are black.


Seen in

  Version: 7.6.3.0.0+ (X86_64) / LibreOffice Community
  Build ID: 9c8a1994bea590db7436638580231daf31844fd6
  CPU threads: 8; OS: Linux 6.5; UI render: default; VCL: gtk3
  Locale: en-US (en_US.UTF-8); UI: en-US

Not seen in 6.4.8.0.0+, so a regression.
Comment 1 raal 2023-10-16 15:43:49 UTC
Confirm with Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 9f44f9fad759dea644356b67b9cd0fab030e8b77
CPU threads: 4; OS: Linux 6.2; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded
Comment 2 raal 2023-10-16 16:04:34 UTC
This seems to have begun at the below commit in bibisect repository/OS linux-64-7.6.
Adding Cc: to Tomaž Vajngerl ; Could you possibly take a look at this one?
Thanks
 34c4a1709bd20127d98085e08b5c031fb6e613d9 is the first bad commit
commit 34c4a1709bd20127d98085e08b5c031fb6e613d9
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Mon Apr 24 23:52:55 2023 +0200

    source c3f7720ff13c34b9cf2c90d9c9b6dcc3d8f4c7a5

149363: oox: extend ThemeExport to export font and format scheme of a theme | https://gerrit.libreoffice.org/c/core/+/149363
Comment 3 Commit Notification 2024-01-01 18:12:05 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/167659bf16a68c27fa547e6eccd62c1a6f69b057

tdf#157742 tdf#157783 - sd: fix copy master slides style

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Gerald Pfeifer 2024-01-03 10:08:58 UTC
Happy to verify this as fixed with

  Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
  Build ID: 960e37af28807ed1b376e26c4504ab755a81dfd5
  CPU threads: 12; OS: Linux 6.6; UI render: default; VCL: gtk3
  Locale: en-US (en_US.UTF-8); UI: en-US

Thank you, Balázs! Are you planning to back port to 24.2 as well?
(Same fix as for bug #157783, so two birds with one stone.)
Comment 5 Commit Notification 2024-01-11 12:01:00 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/7f66797b10b91242c7025215156922bb17c5a777

tdf#157742 tdf#157783 - sd: fix copy master slides style

It will be available in 24.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.